V3168 update generale sinottici

--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -12,7 +12,7 @@
              x:Class="Prevu.Synoptics.P210" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="951" Canvas.Top="518" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" Canvas.Left="950" Canvas.Top="518" StatusComponent="220-22-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -72,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="528" Canvas.Top="429" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" Canvas.Left="528" Canvas.Top="429" StatusComponent="210-22-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -92,7 +92,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="528" Canvas.Top="497" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-22-CV1" Canvas.Left="528" Canvas.Top="497" VisibilityComponent="210-22-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -102,7 +102,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="528" Canvas.Top="567" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-23-CV1" Canvas.Left="528" Canvas.Top="567" VisibilityComponent="210-23-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -112,7 +112,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="951" Canvas.Top="586" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-22-CV1" Canvas.Left="950" Canvas.Top="586" VisibilityComponent="220-22-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -122,7 +122,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-23-CV1" Canvas.Left="951" Canvas.Top="656" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="78" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="220-23-CV1" Canvas.Left="950" Canvas.Top="656" VisibilitySignal="LS1" VisibilityComponent="220-23-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -143,7 +143,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="536" Canvas.Top="571"/>
-        <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="959" Canvas.Top="660"/>
+        <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="958" Canvas.Top="660"/>
         <Separation:VSP_SeparationTank_wHopper HorizontalAlignment="Left" Width="314" Canvas.Left="862" Canvas.Top="212" VerticalAlignment="Center" Height="300" />
         <Machines:CV_Valve HorizontalAlignment="Left"  VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="418" Canvas.Top="280"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Canvas.Left="1196" Canvas.Top="308" >
@@ -158,8 +158,8 @@
         </Machines:CV_Valve_001>
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="115" Canvas.Left="472" Canvas.Top="453"/>
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="115" Canvas.Left="472" Canvas.Top="523"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="892" Canvas.Top="544"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="892" Canvas.Top="613"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="891" Canvas.Top="544"/>
+        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="891" Canvas.Top="613"/>
         <Stirrer:STR_PrewashReactor_wScrew HorizontalAlignment="Left" Width="200" Canvas.Left="469" Canvas.Top="169" VerticalAlignment="Center" Height="245" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
@@ -169,13 +169,13 @@
             ComponentName="220-41-LT1" Canvas.Left="943" Canvas.Top="308" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="220-22-CV1" Canvas.Left="1020" Canvas.Top="530" />
+            ComponentName="220-22-CV1" Canvas.Left="1019" Canvas.Top="530" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-21-CV1" Canvas.Left="398" Canvas.Top="318" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="220-23-CV1" Canvas.Left="1020" Canvas.Top="599" />
+            ComponentName="220-23-CV1" Canvas.Left="1019" Canvas.Top="599" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-22-CV1" Canvas.Left="596" Canvas.Top="441" />
@@ -193,7 +193,7 @@
             ComponentName="210-DISCH" Canvas.Left="596" Canvas.Top="582" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="220-DISCH" Canvas.Left="1020" Canvas.Top="671" />
+            ComponentName="220-DISCH" Canvas.Left="1019" Canvas.Top="671" />
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="210-21-CV1" 
