--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -118,8 +118,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="363" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1" Canvas.Left="698" Canvas.Top="150"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1" Canvas.Left="915" Canvas.Top="290">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="363" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="698" Canvas.Top="150"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="915" Canvas.Top="290">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
