--- a/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
@@ -9,6 +9,16 @@
              x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
+        <Labels:Pipe Width="119" RenderTransformOrigin="0.5,0.5" StatusComponent="382-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1267" Canvas.Top="147" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="792" Canvas.Top="185"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="225" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="441" Canvas.Top="187"/>
         <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Center" VerticalAlignment="Top" Height="212" Width="240" Canvas.Left="606" Canvas.Top="121"/>
@@ -387,8 +397,8 @@
             JumpToLabel="330-21-CV1" Direction="Left" Canvas.Left="203" Canvas.Top="469"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            JumpFromLabel="350-01-MA1" 
-            JumpToLabel="380-01-MA1" RenderTransformOrigin="-0.13,0.49" Canvas.Left="1368" Canvas.Top="479"/>
+            JumpFromLabel="377-01-MA1" 
+            JumpToLabel="225-41-LT1" RenderTransformOrigin="-0.13,0.49" Canvas.Left="1368" Canvas.Top="479"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="77" RenderTransformOrigin="0.5,0.5" Height="14" StatusComponent="380-21-CV1" Canvas.Left="1097" Canvas.Top="256">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -399,7 +409,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1123" Canvas.Top="147">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="119" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="1123" Canvas.Top="147">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
