--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
@@ -388,6 +388,6 @@
             </Machines:DV_Diverter_T.RenderTransform>
         </Machines:DV_Diverter_T>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="225" Canvas.Top="731" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="883-VIEW" DetailsPageName="D883_2" HideComponentName="True" Canvas.Left="1084" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="883-VIEW_2" DetailsPageName="D883_2" HideComponentName="True" Canvas.Left="1084" Canvas.Top="345" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
