--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/PlantView.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/PlantView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.PlantView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,52 +7,121 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com"
+             xmlns:Belts="clr-namespace:Prevu.Drawings.Machines.Belts;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.PlantView"
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
-             d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-
-    <Grid Width="1700" Height="840" VerticalAlignment="Top" HorizontalAlignment="Left">
-        <Rectangle HorizontalAlignment="Center" Height="600" Stroke="Black" VerticalAlignment="Center" Width="1470" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" d:IsLocked="True"/>
-        <Rectangle HorizontalAlignment="Left" Height="1913" Margin="1748,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,260,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
-        <Machines:QX_HMI HorizontalAlignment="Left" Margin="1410,510,0,0" VerticalAlignment="Top" Height="136" Width="125"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="150,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="388,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="549,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="703,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="857,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="1011,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="1165,274,0,0" VerticalAlignment="Top" Width="114" Height="136"/>
-        <Labels:DeviceLabel x:Name="Q11" HorizontalAlignment="Left" Margin="402,215,0,0" VerticalAlignment="Top" ComponentName="Q21"/>
-        <Labels:DeviceLabel x:Name="Q11_Copy" HorizontalAlignment="Left" Margin="563,215,0,0" VerticalAlignment="Top" ComponentName="Q31"/>
-        <Labels:DeviceLabel x:Name="Q11_Copy1" HorizontalAlignment="Left" Margin="717,215,0,0" VerticalAlignment="Top" ComponentName="Q41"/>
-        <Labels:DeviceLabel x:Name="Q11_Copy2" HorizontalAlignment="Left" Margin="871,215,0,0" VerticalAlignment="Top" ComponentName="Q51"/>
-        <Labels:DeviceLabel x:Name="Q11_Copy3" HorizontalAlignment="Left" Margin="1025,215,0,0" VerticalAlignment="Top" ComponentName="Q61"/>
-        <Labels:DeviceLabel x:Name="Q11_Copy4" HorizontalAlignment="Left" Margin="1179,215,0,0" VerticalAlignment="Top" ComponentName="Q91"/>
-        <Labels:DeviceLabel x:Name="Q21_Copy" HorizontalAlignment="Left" Margin="162,200,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
-        <Labels:DeviceLabel x:Name="Q21_Copy1" HorizontalAlignment="Left" Margin="115,53,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
-        <Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1427,185,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
-        <Labels:DeviceLabel x:Name="HMI_01_Copy" HorizontalAlignment="Left" Margin="1427,435,0,0" VerticalAlignment="Top" ComponentName="HMI-02"/>
-        <Labels:DeviceLabel x:Name="S110" HorizontalAlignment="Left" Margin="402,431,0,0" VerticalAlignment="Top" ComponentName="S210"/>
-        <Labels:DeviceLabel x:Name="S110_Copy" HorizontalAlignment="Left" Margin="559,431,0,0" VerticalAlignment="Top" ComponentName="S310"/>
-        <Labels:DeviceLabel x:Name="S110_Copy1" HorizontalAlignment="Left" Margin="718,431,0,0" VerticalAlignment="Top" ComponentName="S410"/>
-        <Labels:DeviceLabel x:Name="S110_Copy2" HorizontalAlignment="Left" Margin="869,431,0,0" VerticalAlignment="Top" ComponentName="S510"/>
-        <Labels:DeviceLabel x:Name="S110_Copy3" HorizontalAlignment="Left" Margin="1025,431,0,0" VerticalAlignment="Top" ComponentName="S610"/>
-        <Labels:DeviceLabel x:Name="S110_Copy4" HorizontalAlignment="Left" Margin="1176,431,0,0" VerticalAlignment="Top" ComponentName="S910"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="846,510,0,0" VerticalAlignment="Top" GroupName="320"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="450,510,0,0" VerticalAlignment="Top" GroupName="050"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="380,510,0,0" VerticalAlignment="Top" GroupName="018"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="575,510,0,0" VerticalAlignment="Top" GroupName="140"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="916,510,0,0" VerticalAlignment="Top" GroupName="330"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1005,510,0,0" VerticalAlignment="Top" GroupName="420"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1075,510,0,0" VerticalAlignment="Top" GroupName="530"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="692,510,0,0" VerticalAlignment="Top" GroupName="230"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="762,510,0,0" VerticalAlignment="Top" GroupName="268"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="846,580,0,0" VerticalAlignment="Top" GroupName="350"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="916,580,0,0" VerticalAlignment="Top" GroupName="371"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1159,510,0,0" VerticalAlignment="Top" GroupName="810"/>
-        <Labels:GroupLabel HorizontalAlignment="Left" Margin="1229,510,0,0" VerticalAlignment="Top" GroupName="880"/>
-
-    </Grid>
+             d:Height="600" d:Width="2000" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="600" Width="2000">
+        <Labels:Pipe Width="51" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS1" Canvas.Left="606" Canvas.Top="296" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="43" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS1" Canvas.Left="591" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="77" RenderTransformOrigin="0.5,0.5" StatusComponent="228-71-ECS1" Canvas.Left="629" Canvas.Top="310" Icon="Right" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="73" RenderTransformOrigin="0.5,0.5" StatusComponent="032-01-MA1" Canvas.Left="123" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="69" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" Canvas.Left="1316" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="73" RenderTransformOrigin="0.5,0.5" StatusComponent="080-01-MA1" Canvas.Left="371" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" Canvas.Left="732" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="253" RenderTransformOrigin="0.5,0.5" StatusComponent="170-01-MA1" Canvas.Left="469" Canvas.Top="330" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="202" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Canvas.Left="831" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="61" RenderTransformOrigin="0.5,0.5" StatusComponent="322-01-MA1" Canvas.Left="1025" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="57" RenderTransformOrigin="0.5,0.5" StatusComponent="330-01-MA1" Canvas.Left="1116" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" Canvas.Left="1202" Canvas.Top="328" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right" Height="29"/>
+        <Labels:Pipe Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="455-01-MA1" Canvas.Left="1414" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="232" RenderTransformOrigin="0.5,0.5" StatusComponent="578-01-MA1" Canvas.Left="1502" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" Canvas.Left="1760" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="166" RenderTransformOrigin="0.5,0.5" StatusComponent="080-01-MA1" Canvas.Left="224" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Center" Icon="Right" Height="23"/>
+        <Labels:Pipe Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="282-01-MA1" Canvas.Left="660" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Icon="Left">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="81" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="701" Canvas.Top="378" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Icon="Right">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Canvas x:Name="L1_Q21" Height="400" Width="250" Canvas.Left="35" Canvas.Top="31" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="400"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="57"/>
+            <Labels:GroupLabel HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="018" Canvas.Left="47" Canvas.Top="284" />
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="Q21" Canvas.Left="80" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="S210" Canvas.Left="80" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Feeding Area" Canvas.Left="51" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="050" Canvas.Left="138" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        </Canvas>
+        <Canvas x:Name="L1_Q31" Height="400" Width="250" Canvas.Left="327" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="400"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="57"/>
+            <Labels:GroupLabel HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="140" Canvas.Left="92" Canvas.Top="280" />
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="Q31" Canvas.Left="80" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="S310" Canvas.Left="80" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Selection Area" Canvas.Left="44" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q41" Height="470" Width="297" Canvas.Left="614" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="470"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q41" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S410" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Grinder Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="230" Canvas.Left="75" Canvas.Top="280" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="268" Canvas.Left="161" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="282" Canvas.Left="75" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q51" Height="380" Width="296" Canvas.Left="953" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="380"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q51" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S510" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Washing Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="320" Canvas.Left="30" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="330" Canvas.Left="116" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="350" Canvas.Left="202" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q61" Height="380" Width="296" Canvas.Left="1300" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="380"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q61" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S610" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Separation Area" Canvas.Left="58" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="430" Canvas.Left="77" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="530" Canvas.Left="163" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q91" Height="380" Width="296" Canvas.Left="1640" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="380"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q91" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S910" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Storage Area" Canvas.Left="76" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="810" Canvas.Left="71" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="880" Canvas.Left="157" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Machines:MaterialInletOutlet Canvas.Left="556" Canvas.Top="247" Height="57" Width="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
 </UserControl>
