--- a/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
@@ -268,7 +268,7 @@
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="236-01-MA1" 
-            JumpToLabel="225-01-CV1"  Direction="Left" Canvas.Left="319" Canvas.Top="638"/>
+            JumpToLabel="225-41-LT1"  Direction="Left" Canvas.Left="319" Canvas.Top="638"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="230-21-CV1" 
