--- a/Prevu.Synoptics.V3168_Sirplaste/WaterView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/WaterView.xaml
@@ -11,8 +11,8 @@
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
-             d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="840" Width="1700" >
+             d:Height="800" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="800" Width="1700" >
         <Labels:Pipe Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="288-21-CV1" Canvas.Left="682" Canvas.Top="615" HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -133,7 +133,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="112" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="588" Canvas.Top="720" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="90" RenderTransformOrigin="0.5,0.5" StatusComponent="293-01-MA1" Canvas.Left="599" Canvas.Top="709" Color="Water" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -253,7 +253,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="146" Canvas.Top="62" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="42" RenderTransformOrigin="0.5,0.5" StatusComponent="291-01-MA1" Canvas.Left="146" Canvas.Top="62" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -477,10 +477,10 @@
             <Border BorderThickness="1" Height="86" Width="86" Background="Gray" CornerRadius="15,0,0,15" HorizontalAlignment="Left" VerticalAlignment="Top" Effect="{StaticResource MaterialDesignElevationShadow12}" BorderBrush="Black"/>
             <Labels:GroupLabel GroupName="330" Canvas.Left="11" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         </Canvas>
-        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="390" Canvas.Top="160" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="706" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="1019" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="1331" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="396" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50"/>
+        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="711" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Top" Height="50"/>
+        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="1025" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50"/>
+        <Misc:WaterView_Freccia_Flow_Materiale Canvas.Left="1337" Canvas.Top="169" HorizontalAlignment="Left" VerticalAlignment="Center" Height="50"/>
     </Canvas>
 
 </UserControl>
