V3168-Change Wrong comp Names

--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -190,10 +190,10 @@
             ComponentName="220-SEPARATION" Canvas.Left="887" Canvas.Top="151" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="210-DISCH" Canvas.Left="596" Canvas.Top="582" />
+            ComponentName="210-DISCHARGE" Canvas.Left="596" Canvas.Top="582" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="220-DISCH" Canvas.Left="1019" Canvas.Top="671" />
+            ComponentName="220-DISCHARGE" Canvas.Left="1019" Canvas.Top="671" />
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="210-21-CV1" 
