--- a/Prevu.Synoptics.V3001-COVERIS/P460.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P460.xaml
@@ -85,7 +85,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="372,582,0,0" VerticalAlignment="Top" Color="Vapor" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="372,582,0,0" VerticalAlignment="Top" Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -95,7 +95,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="425,629,0,0" VerticalAlignment="Top" Color="Vapor" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="425,629,0,0" VerticalAlignment="Top" Color="Water" Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
