V3510: update plant view and fixes

--- a/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
@@ -134,7 +134,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="64" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="455" Canvas.Top="706" />
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="271" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="1063" Canvas.Top="735" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="279" RenderTransformOrigin="0.5,0.5" StatusComponent="848-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="1063" Canvas.Top="735" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -243,9 +243,9 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="820-SILO" Canvas.Left="780" Canvas.Top="266"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="848-71-ECS1" Canvas.Left="1214" Canvas.Top="636" />
+            ComponentName="848-71-ECS1" Canvas.Left="1224" Canvas.Top="636" />
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="290" Canvas.Top="334" />
     <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="709" Canvas.Top="158"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
