--- a/Prevu.Synoptics.V3510_Greentech_Romania/D820.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/D820.xaml
@@ -10,7 +10,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas Height="450" Width="320">
     <Machines:Storage_silo Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-61-LEV" SignalName="LSHA" Canvas.Left="207" Canvas.Top="48"/>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-41-WT1" SignalName="LSHA" Canvas.Left="207" Canvas.Top="48"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Center" 
 		ComponentName="820-01-MA1" Canvas.Left="29" Canvas.Top="39"/>
